adding colab links

--- a/Exercises/1.Fitting-and-Bias-Variance-Tradeoff-SOLN.ipynb
+++ b/Exercises/1.Fitting-and-Bias-Variance-Tradeoff-SOLN.ipynb
@@ -1,9 +1,17 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "4d7b40f7-cc03-42b2-bacb-dea592228d0c",
+   "metadata": {},
+   "source": [
+    "<a href=\"https://colab.research.google.com/github/makagan/TRISEP_Tutorial/blob/main/Exercises/1.Fitting-and-Bias-Variance-Tradeoff-SOLN.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "bff1891c",
+   "execution_count": null,
+   "id": "96e7358e-96cf-4c87-9f4c-808e52679e48",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,11 +22,12 @@
   },
   {
    "cell_type": "markdown",
-   "id": "294969ed",
+   "id": "9ea13cec-96ce-4a6e-a888-325ee74757ee",
    "metadata": {},
    "source": [
-    "# Exploring the Bias Variance Tradeoff\n",
+    "# Polynomial Fitting and Exploring the Bias Variance Tradeoff \n",
     "\n",
+    "Adapted from [notebooks](https://github.com/odsl-team/block-course-apr24-ML/tree/main/Exercises) developed by Nicole Hartman and Lukas Heinrich\n",
     "\n",
     "## Step 1: Write a function `generate_data(N)` \n",
     "\n",
@@ -44,8 +53,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "2b5fc8ee",
+   "execution_count": null,
+   "id": "e03c2b8f-051f-4c2e-bc0c-57e576200329",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -383,9 +392,7 @@
    "cell_type": "code",
    "execution_count": 10,
    "id": "ad47343d",
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -453,7 +460,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.11"
+   "version": "3.9.18"
   }
  },
  "nbformat": 4,
