--- a/Exercises/1.FurtherReadingDay1.ipynb
+++ b/Exercises/1.FurtherReadingDay1.ipynb
@@ -4,8 +4,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a href=\"https://colab.research.google.com/github/makagan/TRISEP_Tutorial/blob/main/Exercises/1.FurtherReadingDay1.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Double Descent in Bias-Variance Tradeoff in Cubic Spline Regression\n",
     "\n",
+    "Author: Lukas Heinrich, Adapted from [notebooks](https://github.com/odsl-team/block-course-apr24-ML/tree/main/Exercises) developed by Nicole Hartman and Lukas Heinrich"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "A -- at first sight unintuitive  -- result in Deep Learning specifically is that we often have highly overparametrized models but that those models still generalize well.\n",
     "\n",
     "This means that the model has many more parameters than we have data points. The classic discussion\n",
@@ -40,10 +54,7 @@
     "\n",
     "and the paper\n",
     "\n",
-    "https://arxiv.org/abs/1912.02292\n",
-    "\n",
-    "\n",
-    "Author: Lukas Heinrich\n"
+    "https://arxiv.org/abs/1912.02292"
    ]
   },
   {
@@ -240,7 +251,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.9.18"
   },
   "vscode": {
    "interpreter": {
