--- a/Exercises/2.Intro-NN-pytorch.ipynb
+++ b/Exercises/2.Intro-NN-pytorch.ipynb
@@ -2,10 +2,20 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "9a1003ed-bebd-4fec-8148-cd27f0f5e3db",
+   "id": "214ccb5b-816c-4452-a9c4-a306026351d7",
    "metadata": {},
    "source": [
-    "# Intro to Pytorch\n",
+    "<a href=\"https://colab.research.google.com/github/makagan/TRISEP_Tutorial/blob/main/Exercises/2.Intro-NN-pytorch.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8d219027-8b41-4c39-9288-b32f66567094",
+   "metadata": {},
+   "source": [
+    "# Intro to Neural Networks Pytorch\n",
+    "\n",
+    "Adapted from [notebooks](https://github.com/odsl-team/block-course-apr24-ML/tree/main/Exercises) developed by Nicole Hartman\n",
     "\n",
     "Yesterday, we coded up the forward pass and backward propagation _by scratch_. Today, we're going to use an automatic differentiation framework :) We had checked our manual gradients before in `jax` b/c the syntax is very transparent for these types of gradient checks, but we'll use `pytorch` for the rest of the block course because it's a great balance between ease of use for projects, while still having it be easy to dive back into the matrix / tensor manipulation code easily (🥸) if needed (🤓).\n",
     "\n",
@@ -520,7 +530,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.9.18"
   }
  },
  "nbformat": 4,
