--- a/Exercises/1.Fitting-and-Bias-Variance-Tradeoff.ipynb
+++ b/Exercises/1.Fitting-and-Bias-Variance-Tradeoff.ipynb
@@ -2,14 +2,20 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "e1591f28-18dc-4df2-b00f-90b684adc31b",
+   "id": "170f683b-b1dd-4b22-ab7c-8693d93e9e6e",
    "metadata": {},
    "source": [
-    "# Exploring the Bias Variance Tradeoff\n",
+    "<a href=\"https://colab.research.google.com/github/makagan/TRISEP_Tutorial/blob/main/Exercises/1.Fitting-and-Bias-Variance-Tradeoff.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3df074e1-e5f8-4509-b757-570b1814cf6b",
+   "metadata": {},
+   "source": [
+    "# Polynomial Fitting and Exploring the Bias Variance Tradeoff\n",
     "\n",
-    "Lukas Heinrich\n",
-    "\n",
-    "Mar 2023"
+    "Adapted from [notebooks](https://github.com/odsl-team/block-course-apr24-ML/tree/main/Exercises) developed by Nicole Hartman and Lukas Heinrich\n"
    ]
   },
   {
@@ -316,7 +322,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.9.18"
   }
  },
  "nbformat": 4,
