--- a/Exercises/2.First-NN-soln.ipynb
+++ b/Exercises/2.First-NN-soln.ipynb
@@ -2,10 +2,20 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "288a23c5-4388-45b4-94ab-f0af2088d824",
+   "id": "aec05141-b189-4d7d-add1-788f9f1b29d8",
+   "metadata": {},
+   "source": [
+    "<a href=\"https://colab.research.google.com/github/makagan/TRISEP_Tutorial/blob/main/Exercises/2.First-NN-soln.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a2c1302e-a038-4031-b8af-fee610471fb7",
    "metadata": {},
    "source": [
     "# Our First NN\n",
+    "\n",
+    "Adapted from [notebooks](https://github.com/odsl-team/block-course-apr24-ML/tree/main/Exercises) developed by Nicole Hartman\n",
     "\n",
     "**Goal:** Code up a NN from scratch (numpy)\n",
     "\n",
@@ -17,14 +27,7 @@
     "2. Computational graphs interlude\n",
     "3. NN gradients\n",
     "4. Checking gradients in jax\n",
-    "5. **Bonus:** Set up the training loop for the model\n",
-    "\n",
-    "\n",
-    "Nicole Hartman\n",
-    "\n",
-    "ODSL ML Block Course\n",
-    "\n",
-    "16 Apr 2022\n"
+    "5. **Bonus:** Set up the training loop for the model\n"
    ]
   },
   {
@@ -925,7 +928,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.9.18"
   }
  },
  "nbformat": 4,
