--- a/Exercises/3.CNN-MNIST.ipynb
+++ b/Exercises/3.CNN-MNIST.ipynb
@@ -2,10 +2,28 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "30b64457",
+   "id": "08b942b0-fb39-4360-9ee3-1c919481b0c7",
    "metadata": {},
    "source": [
-    "# Part 1: Understanding Convlutions"
+    "<a href=\"https://colab.research.google.com/github/makagan/TRISEP_Tutorial/blob/main/Exercises/3.CNN-MNIST.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "10423598-81b3-4284-927b-e18ab448590b",
+   "metadata": {},
+   "source": [
+    "# Convolutional Neural Networks\n",
+    "\n",
+    "Adapted from [notebooks](https://github.com/odsl-team/block-course-apr24-ML/tree/main/Exercises) developed by Baran Hashemi"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b6b73e69-d8a9-4436-81d4-ff1411b65687",
+   "metadata": {},
+   "source": [
+    "## Part 1: Understanding Convlutions"
    ]
   },
   {
@@ -306,7 +324,9 @@
    "cell_type": "code",
    "execution_count": 99,
    "id": "bf9ed460",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -423,7 +443,7 @@
    "id": "b5a588d3",
    "metadata": {},
    "source": [
-    "# Part 2\n",
+    "## Part 2\n",
     "\n",
     "## Step 0: install the dataset"
    ]
@@ -833,7 +853,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.9.18"
   }
  },
  "nbformat": 4,
