--- a/Exercises/3.Going-Deeper-SOLN.ipynb
+++ b/Exercises/3.Going-Deeper-SOLN.ipynb
@@ -2,12 +2,20 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "37cbbb76-2123-4de7-aa2d-117a7ce04847",
+   "id": "fb4aae2d-2c71-4a32-876a-4fbc993edb1d",
+   "metadata": {},
+   "source": [
+    "<a href=\"https://colab.research.google.com/github/makagan/TRISEP_Tutorial/blob/main/Exercises/3.Going-Deeper-SOLN.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "08c61cc6-28f5-4578-a8ab-5768a28c0af1",
    "metadata": {},
    "source": [
     "# Going Deeper\n",
     "\n",
-    "Notebook / exercise from Lukas Heinrichs Deep Learning course."
+    "Adapted from [notebooks](https://github.com/odsl-team/block-course-apr24-ML/tree/main/Exercises) developed by Nicole Hartman and Lukas Heinrich"
    ]
   },
   {
@@ -488,7 +496,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.9.18"
   },
   "vscode": {
    "interpreter": {
