--- a/Exercises/3.Going-Deeper.ipynb
+++ b/Exercises/3.Going-Deeper.ipynb
@@ -2,12 +2,20 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "37cbbb76-2123-4de7-aa2d-117a7ce04847",
+   "id": "94aae006-7e2f-44a6-9a2a-dd6e1f31852c",
+   "metadata": {},
+   "source": [
+    "<a href=\"https://colab.research.google.com/github/makagan/TRISEP_Tutorial/blob/main/Exercises/3.Going-Deeper.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "643fbd24-c741-4b28-a78b-9f5a0dfa3d41",
    "metadata": {},
    "source": [
     "# Going Deeper\n",
     "\n",
-    "Notebook / exercise from Lukas Heinrichs Deep Learning course."
+    "Adapted from [notebooks](https://github.com/odsl-team/block-course-apr24-ML/tree/main/Exercises) developed by Nicole Hartman and Lukas Heinrich"
    ]
   },
   {
@@ -278,7 +286,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.9.18"
   },
   "vscode": {
    "interpreter": {
