--- a/Exercises/4.PCA-MNIST-SOLN.ipynb
+++ b/Exercises/4.PCA-MNIST-SOLN.ipynb
@@ -4,14 +4,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a href=\"https://colab.research.google.com/github/makagan/TRISEP_Tutorial/blob/main/Exercises/4.PCA-MNIST-SOLN.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Principle Componenet Analysis: MNIST\n",
     "\n",
-    "Notebook / exercise from Philipp Eller.\n",
+    "Adapted from [notebooks](https://github.com/odsl-team/block-course-apr24-ML/tree/main/Exercises) developed by Nicole Hartman and Philipp Eller.\n",
     "\n",
     "**Useful functions**\n",
     "\n",
-    "- `np.eigh`\n",
-    "- "
+    "- `np.eigh`\n"
    ]
   },
   {
@@ -747,7 +753,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.9.18"
   }
  },
  "nbformat": 4,
