--- a/Exercises/2.NN-MLP-MNIST-SOLN.ipynb
+++ b/Exercises/2.NN-MLP-MNIST-SOLN.ipynb
@@ -4,9 +4,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a href=\"https://colab.research.google.com/github/makagan/TRISEP_Tutorial/blob/main/Exercises/2.NN-MLP-MNIST-SOLN.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# MNIST + MLP\n",
     "\n",
-    "You can open this notebook either within a supported container or Google colaboratory [here](https://colab.research.google.com/github/drinkingkazu/TRISEP2022ML/blob/master/NeuralNetworks/NN-00-MLP-Solution.ipynb).\n",
+    "Adapted from [notebook](https://github.com/drinkingkazu/TRISEP2022ML/blob/master/NeuralNetworks/NN-00-MLP-Solution.ipynb) by Kazuhiro Terao\n",
+    "\n",
     "\n",
     "In this notebook, we design and train a Multi-Layer Perceptrons (MLP) for hand-written digit classification task. We use MNIST dataset that contains 28x28 pixel images of a hand-written digit (0 to 9, so 10 classification targets). \n",
     "\n",
@@ -1101,7 +1109,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.9.18"
   }
  },
  "nbformat": 4,
