add mnist connect on colab

--- a/Exercises/4.PCA-MNIST-SOLN.ipynb
+++ b/Exercises/4.PCA-MNIST-SOLN.ipynb
@@ -105,22 +105,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "X (60000, 28, 28)\n",
-      "y (60000,)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "X = np.load('mnist.npz')['x_train']\n",
-    "y = np.load('mnist.npz')['y_train']\n",
+    "import sys\n",
+    "IN_COLAB = 'google.colab' in sys.modules\n",
+    "print(\"Running in Google Colab = \", IN_COLAB)\n",
     "\n",
+    "if not IN_COLAB:\n",
+    "    # when running locally\n",
+    "    X = np.load('mnist.npz')['x_train']\n",
+    "    y = np.load('mnist.npz')['y_train']\n",
+    "\n",
+    "else:\n",
+    "    # when running on Colab\n",
+    "    from torchvision import datasets, transforms\n",
+    "    # Data file download directory\n",
+    "    LOCAL_DATA_DIR = './mnist-data'\n",
+    "    # Use prepared data handler from pytorch (torchvision)\n",
+    "    dataset = datasets.MNIST(LOCAL_DATA_DIR, train=True, download=True,\n",
+    "                             transform=transforms.Compose([transforms.ToTensor()]))\n",
+    "\n",
+    "\n",
+    "    from torch.utils.data import DataLoader\n",
+    "    from torch import squeeze\n",
+    "    train_dataloader = DataLoader(dataset, batch_size=len(dataset), shuffle=True)\n",
+    "\n",
+    "    _X, _y = next(iter(train_dataloader))\n",
+    "    X = squeeze(_X).numpy()\n",
+    "    y = _y.numpy()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "print('X',X.shape)\n",
     "print('y',y.shape)"
    ]
