--- a/Exercises/4.PCA-MNIST.ipynb
+++ b/Exercises/4.PCA-MNIST.ipynb
@@ -139,11 +139,13 @@
     "\n",
     "\n",
     "    from torch.utils.data import DataLoader\n",
-    "    from torch import squeeze\n",
-    "    train_dataloader = DataLoader(dataset, batch_size=len(dataset), shuffle=True)\n",
+    "    from torch import reshape\n",
+    "    train_dataloader = DataLoader(dataset, batch_size=len(dataset), shuffle=False)\n",
     "\n",
     "    _X, _y = next(iter(train_dataloader))\n",
-    "    X = squeeze(_X).numpy()\n",
+    "\n",
+    "    # dataset already normalized by 255 in Torch, undoing so we can explore ourselves\n",
+    "    X = reshape(255*_X, (len(dataset), 28, 28)).numpy()\n",
     "    y = _y.numpy()"
    ]
   },
@@ -445,7 +447,7 @@
     "'''\n",
     "\n",
     "fig, ax = plt.subplots(1, 1, figsize=(10,5))\n",
-    "ax.bar(np.arange(k) + 1, explained_variance_ratio, width=1, label='cumulative')\n",
+    "ax.bar(np.arange(len(explained_variance_ratio)) + 1, explained_variance_ratio, width=1, label='cumulative')\n",
     "\n",
     "ax.set_ylabel('Explained Variance (%)')\n",
     "ax.set_xlabel('PCA component')"
