--- a/Exercises/_4.AutoEncoder-MNIST-SOLN.ipynb
+++ b/Exercises/_4.AutoEncoder-MNIST-SOLN.ipynb
@@ -114,16 +114,26 @@
     "    def __init__(self):\n",
     "        super().__init__()\n",
     "        # TODO: Define the encoder\n",
-    "        self.encoder = ...\n",
+    "        self.encoder = nn.Sequential(\n",
+    "            nn.Conv2d(1, 6, kernel_size=5),\n",
+    "            nn.ReLU(),\n",
+    "            nn.Conv2d(6,16,kernel_size=5),\n",
+    "            nn.ReLU())\n",
     "\n",
     "        # TODO: Define the decoder\n",
-    "        self.decoder = ...\n",
+    "        self.decoder = nn.Sequential(             \n",
+    "            nn.ConvTranspose2d(16,6,kernel_size=5),\n",
+    "            nn.ReLU(),\n",
+    "            nn.ConvTranspose2d(6,1,kernel_size=5),\n",
+    "            nn.ReLU(),\n",
+    "            nn.Sigmoid())\n",
+    "        \n",
     "    def forward(self,x):\n",
     "        # TODO: Fill the gap\n",
-    "        latent_code = self.encoder(...)\n",
+    "        code = self.encoder(x)\n",
     "        \n",
     "        # TODO: Fill the gap\n",
-    "        reco = self.decoder(...)\n",
+    "        reco = self.decoder(code)\n",
     "\n",
     "        return code,reco"
    ]
@@ -273,14 +283,14 @@
     "\n",
     "def train():\n",
     "    #TODO: Define the model \n",
-    "    model = ...\n",
+    "    model = Autoencoder()\n",
     "    #TODO: Define your optimizer\n",
-    "    opt = ...\n",
+    "    opt = torch.optim.Adam(model.parameters(),weight_decay=1e-5)\n",
     "    for i in range(50000):\n",
     "        x = sample_train(200)\n",
     "        code, reco = model(x)\n",
     "         #TODO: Define and apply the loss function\n",
-    "        loss = ...\n",
+    "        loss = nn.MSELoss(reco, x)\n",
     "\n",
     "        loss.backward()\n",
     "        opt.step()\n",
