--- a/Exercises/4.AutoEncoder-MNIST-SOLN.ipynb
+++ b/Exercises/4.AutoEncoder-MNIST-SOLN.ipynb
@@ -23,7 +23,7 @@
     "Adapted from [notebooks](https://github.com/odsl-team/block-course-apr24-ML/tree/main/Exercises) developed by Baran Hashemi\n",
     "\n",
     "\n",
-    "As discussed in the lecture, one of the standard self-supervised learning techniques is \"auto-encoding\", that is \n",
+    "As discussed in the lecture, one of the standard unsupervised learning techniques is \"auto-encoding\", that is \n",
     "taking a datum $x$ to a \"code\" $c = g_\\phi(x)$ and reconstructing it again $x' = f_\\theta(c)$\n",
     "\n",
     "The training goal is to make the reconstruction as close as possible to the original: $L(x,x')$\n",
@@ -42,7 +42,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8199183f-2624-4d5b-be3f-1b2602026aad",
+   "id": "f43eaa3b-4998-4c93-94fd-6cfa1e48b8d3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!pip install mnist"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a2460376-4964-48f9-819b-a6da41e829f1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -137,14 +147,11 @@
    "source": [
     "## Step 2: Import Data \n",
     "\n",
-    "Use `pip install mnist` to get access to the MNIST dataset and write a data-generating function\n",
+    "write a data-generating function\n",
     "`sample_train(N, return_labels = False)` that samples N instances from the training set. \n",
     "optionally it should also return the labels (this is just for later, since we are doing unsupervised learning, we don't need the labels for training)\n",
     "\n",
-    "### Mind the TODO gap\n",
-    "\n",
-    "### Reminder fact:\n",
-    "If we use the labels in the training to have more control over our sampling process as we discussed in the lecture for VAEs and GANs, we get from unsupervised learning to semi-supervised leartning."
+    "### Mind the TODO gap\n"
    ]
   },
   {
