--- a/Exercises/1.1.Fitting-and-Bias-Variance-Tradeoff-SOLN.ipynb
+++ b/Exercises/1.1.Fitting-and-Bias-Variance-Tradeoff-SOLN.ipynb
@@ -5,7 +5,7 @@
    "id": "4d7b40f7-cc03-42b2-bacb-dea592228d0c",
    "metadata": {},
    "source": [
-    "<a href=\"https://colab.research.google.com/github/makagan/TRISEP_Tutorial/blob/main/Exercises/1.Fitting-and-Bias-Variance-Tradeoff-SOLN.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+    "<a href=\"https://colab.research.google.com/github/makagan/TRISEP_Tutorial/blob/main/Exercises/1.1.Fitting-and-Bias-Variance-Tradeoff-SOLN.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
    ]
   },
   {
