--- a/Exercises/1.1.Fitting-and-Bias-Variance-Tradeoff.ipynb
+++ b/Exercises/1.1.Fitting-and-Bias-Variance-Tradeoff.ipynb
@@ -5,7 +5,7 @@
    "id": "170f683b-b1dd-4b22-ab7c-8693d93e9e6e",
    "metadata": {},
    "source": [
-    "<a href=\"https://colab.research.google.com/github/makagan/TRISEP_Tutorial/blob/main/Exercises/1.Fitting-and-Bias-Variance-Tradeoff.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+    "<a href=\"https://colab.research.google.com/github/makagan/TRISEP_Tutorial/blob/main/Exercises/1.1.Fitting-and-Bias-Variance-Tradeoff.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
    ]
   },
   {
