--- a/Exercises/2.1.First-NN.ipynb
+++ b/Exercises/2.1.First-NN.ipynb
@@ -2,15 +2,15 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "aec05141-b189-4d7d-add1-788f9f1b29d8",
+   "id": "54a1d03d-4c0c-4f30-ba7e-1beab91a7bb1",
    "metadata": {},
    "source": [
-    "<a href=\"https://colab.research.google.com/github/makagan/TRISEP_Tutorial/blob/main/Exercises/2.First-NN-SOLN.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+    "<a href=\"https://colab.research.google.com/github/makagan/TRISEP_Tutorial/blob/main/Exercises/2.1.First-NN.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "a2c1302e-a038-4031-b8af-fee610471fb7",
+   "id": "15d1ce10-57f4-4253-8470-8c5e065600ae",
    "metadata": {},
    "source": [
     "# Our First NN\n",
@@ -150,7 +150,7 @@
     "\n",
     "**Hint:** this is just three equations:\n",
     "\n",
-    "$$z = X W_1^T + b_1$$\n"
+    "$$z = X W^T + b_1$$\n"
    ]
   },
   {
@@ -349,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 210,
+   "execution_count": 78,
    "id": "bf1022aa-71a4-4ab1-a4fd-9b5f542549d7",
    "metadata": {},
    "outputs": [],
@@ -363,25 +363,20 @@
     "    - grad: if not None, this is the \"upstream gradient\"\n",
     "\n",
     "    Outpus:\n",
-    "    - If (upstream) grad is passed, return f1(x,y), output_grad\n",
+    "    - If grad is passed, return f(x,y), grad\n",
     "    - Else, just the \"normal\" fct, return f1(x,y)\n",
     "    '''\n",
     "    \n",
-    "    out = x+y\n",
+    "    out = \n",
     "    if grad:\n",
-    "        dqdx = 1\n",
-    "        dqdy = 1\n",
-    "        # here grad = df/dq\n",
-    "        dfdx = dqdx * grad\n",
-    "        dfdy = dqdy * grad\n",
-    "        return out, np.array([dfdx, dfdy])\n",
+    "        raise NotImplementedError\n",
     "    else:\n",
     "        return out"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 212,
+   "execution_count": 79,
    "id": "c0e4b3e8-116e-4727-81d8-69e2843d35a3",
    "metadata": {},
    "outputs": [],
@@ -391,16 +386,16 @@
     "    f2(q,z) = q*z\n",
     "    '''\n",
     "\n",
-    "    out = q * z\n",
+    "    out =\n",
     "    if grad:\n",
-    "       return out, np.array([z,q])*grad\n",
+    "       raise NotImplementedError\n",
     "    else: \n",
     "        return out"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 213,
+   "execution_count": 80,
    "id": "5941b7b7-de97-49f8-992e-672758648f3d",
    "metadata": {},
    "outputs": [],
@@ -411,14 +406,14 @@
     "    '''\n",
     "\n",
     "    # Need to run the program 1x to get the values to eval the grad\n",
-    "    \n",
-    "    q = f1(x,y)\n",
-    "    out = f2(q,z)\n",
-    "    \n",
+    "    q = \n",
+    "    out = \n",
+    "\n",
     "    if grad:\n",
-    "        \n",
-    "        _, [dfdq, dfdz] = f2(q,z,grad=grad)\n",
-    "        _, [dfdx,dfdy] = f1(x,y, dfdq)\n",
+    "\n",
+    "        '''\n",
+    "        Fill in\n",
+    "        '''\n",
     "        \n",
     "        return out, [dfdx, dfdy, dfdz]\n",
     "    \n",
@@ -437,18 +432,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 214,
+   "execution_count": 192,
    "id": "fce6e1be-3907-4442-b162-33a1e56f5e74",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "12\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "x,y,z = 5,-2,4\n",
     "print(f(x,y,z))"
@@ -465,20 +452,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 215,
+   "execution_count": 193,
    "id": "f12d235d-33a6-40a6-9936-f28a361bb8b1",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "df/dx= 4\n",
-      "df/dy= 4\n",
-      "df/dz= 3\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "dfdf = 1\n",
     "out, grad = f(x,y,z, grad=dfdf)\n",
@@ -499,7 +476,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 229,
+   "execution_count": 125,
    "id": "d6ea1e0c-4b15-4715-b0d4-fdc9be7d8995",
    "metadata": {},
    "outputs": [],
@@ -514,7 +491,7 @@
     "    Outputs:\n",
     "    - H: array (bs,m)\n",
     "\n",
-    "    If grad is an array (bs,m), return tuple: out, (grad_W, grad_b, grad_H)\n",
+    "    If grad is true, return tuple: out, (grad_W, grad_b, grad_H)\n",
     "    - grad_W: array (bs, m, n)\n",
     "    - grad_b: array (bs, m)\n",
     "    - grad_X: array (bs,    n)\n",
@@ -523,13 +500,18 @@
     "    assert X.shape[1] == W.shape[1]\n",
     "    assert W.shape[0] == b.shape[0]\n",
     "\n",
-    "    H = np.einsum('mn,bn->bm',W,X) + b\n",
+    "    '''\n",
+    "    TO DO: Fill in\n",
+    "    '''\n",
+    "    raise NotImplementedError\n",
+    "    \n",
+    "    H = \n",
     "    \n",
     "    if grad is not None:\n",
     "        \n",
-    "        grad_W = np.einsum('bn,bm->bmn',X,grad)\n",
-    "        grad_b = grad * np.ones_like(b)\n",
-    "        grad_X = np.einsum('mn,bm->bn',W,grad)\n",
+    "        grad_W = \n",
+    "        grad_b = \n",
+    "        grad_X = \n",
     "        \n",
     "        return H, (grad_W, grad_b, grad_X)\n",
     "    else:\n",
@@ -538,7 +520,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 239,
+   "execution_count": 126,
    "id": "849c6d4b-25b8-45f0-9d63-4ea1ac07f1fa",
    "metadata": {},
    "outputs": [],
@@ -547,18 +529,20 @@
     "    '''\n",
     "    Non-linearity: better gradient flow\n",
     "    '''\n",
-    "    out = np.where(z>0,z,0)\n",
+    "    out = \n",
     "\n",
     "    if grad is not None:\n",
-    "        dz = (z>0).astype(float) \n",
-    "        return out, dz * grad\n",
+    "        '''\n",
+    "        To do: Calculate the local grad and return it too\n",
+    "        ''' \n",
+    "        raise NotImplementedError \n",
     "    else:\n",
     "        return out"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 240,
+   "execution_count": 166,
    "id": "2ce982f0-1f53-433e-bbd2-9c73a88786c1",
    "metadata": {},
    "outputs": [],
@@ -573,16 +557,17 @@
     "    W2, b2 = param_dict[\"W2\"], param_dict[\"b2\"]\n",
     "\n",
     "    # forward pass\n",
-    "    z = linear(W1,X,b1)\n",
-    "    h = relu(z)\n",
-    "    out = linear(W2,h,b2)\n",
+    "    '''\n",
+    "    TO DO: Fill in\n",
+    "    '''\n",
     "\n",
     "    if grad is not None:\n",
     "        \n",
     "        # reverse pass \n",
-    "        _, (grad_W2, grad_b2, grad_h) = linear(W2,h,b2, grad)\n",
-    "        _, dz = relu(z, grad_h)\n",
-    "        _, (grad_W1, grad_b1, grad_x) = linear (W1,X,b1, dz)\n",
+    "        '''\n",
+    "        TO DO: Fill in\n",
+    "        '''\n",
+    "        \n",
     "\n",
     "        grad_dict ={'W1':grad_W1.mean(axis=0),\n",
     "                    'b1':grad_b1.mean(axis=0),\n",
@@ -596,7 +581,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 241,
+   "execution_count": 167,
    "id": "0f3b8cd7-a2b1-4f27-bbce-ea738e1d9dd4",
    "metadata": {},
    "outputs": [],
@@ -606,21 +591,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 242,
+   "execution_count": 194,
    "id": "ebb18297-1d3b-46db-9951-fee8f090b29d",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "-4.157840893588943"
-      ]
-     },
-     "execution_count": 242,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# forward mode\n",
     "out = myNN(X, param_dict)\n",
@@ -629,21 +603,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 243,
+   "execution_count": 195,
    "id": "94dbc5e0-d713-4f6a-bf67-4dafce0b882c",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "-4.157840893588943"
-      ]
-     },
-     "execution_count": 243,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# reverse mode\n",
     "dfdf = np.ones((1,1))\n",
@@ -653,21 +616,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 244,
+   "execution_count": 196,
    "id": "9001d687-79e4-41ec-9f69-7b609eb0a261",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "W1 (16, 5)\n",
-      "b1 (16,)\n",
-      "W2 (1, 16)\n",
-      "b2 (1,)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for k in param_dict.keys():\n",
     "    print(k,grad_dict[k].shape)"
@@ -697,7 +649,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 245,
+   "execution_count": 172,
    "id": "ce259cf1-fcc5-4a84-85e4-914a3da0e7cf",
    "metadata": {},
    "outputs": [],
@@ -719,7 +671,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 246,
+   "execution_count": 173,
    "id": "4d4aa2ee-f2f7-4cf6-a03e-63a2ee910a01",
    "metadata": {},
    "outputs": [],
@@ -730,7 +682,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 247,
+   "execution_count": 174,
    "id": "b1fc2082-c8a0-42ea-9c4a-8e3fc196c2ca",
    "metadata": {},
    "outputs": [
@@ -740,7 +692,7 @@
        "Array(6., dtype=float32, weak_type=True)"
       ]
      },
-     "execution_count": 247,
+     "execution_count": 174,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -755,7 +707,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 249,
+   "execution_count": 175,
    "id": "a46fa584-082b-4adb-8470-35b158205b2f",
    "metadata": {},
    "outputs": [],
@@ -766,7 +718,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 251,
+   "execution_count": 176,
    "id": "4eb3cc40-afca-4b55-abaa-6aa116afff68",
    "metadata": {},
    "outputs": [],
@@ -777,7 +729,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 252,
+   "execution_count": 177,
    "id": "fb565620-2c7f-49ab-ac19-5eb2ae5e20d5",
    "metadata": {},
    "outputs": [],
@@ -798,7 +750,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 254,
+   "execution_count": 178,
    "id": "e93e469d-4e10-4a94-b28f-e45ceeaad333",
    "metadata": {},
    "outputs": [],
@@ -824,7 +776,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 258,
+   "execution_count": 179,
    "id": "e2a3138f-7645-4dcd-a8b9-1682e79e82dc",
    "metadata": {},
    "outputs": [],
@@ -837,7 +789,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 259,
+   "execution_count": 198,
    "id": "6dba56d4-1c27-4015-995d-686ed5d1f977",
    "metadata": {},
    "outputs": [
@@ -865,21 +817,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 260,
+   "execution_count": 199,
    "id": "bef05af7-35c9-45ff-a5fa-55be0b29a117",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "W1 True\n",
-      "W2 True\n",
-      "b1 True\n",
-      "b2 True\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for k, v in grad_dict_jax.items():\n",
     "    print(k, np.all(np.isclose(v, grad_dict[k])))"
