--- a/Exercises/2.2.Intro-NN-pytorch-SOLN.ipynb
+++ b/Exercises/2.2.Intro-NN-pytorch-SOLN.ipynb
@@ -5,7 +5,7 @@
    "id": "b407e64b-7802-46d8-9423-7c5881afc4a4",
    "metadata": {},
    "source": [
-    "<a href=\"https://colab.research.google.com/github/makagan/TRISEP_Tutorial/blob/main/Exercises/2.Intro-NN-pytorch-SOLN.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+    "<a href=\"https://colab.research.google.com/github/makagan/TRISEP_Tutorial/blob/main/Exercises/2.2.Intro-NN-pytorch-SOLN.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
    ]
   },
   {
