--- a/Exercises/2.1.First-NN-SOLN.ipynb
+++ b/Exercises/2.1.First-NN-SOLN.ipynb
@@ -2,15 +2,15 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "54a1d03d-4c0c-4f30-ba7e-1beab91a7bb1",
+   "id": "aec05141-b189-4d7d-add1-788f9f1b29d8",
    "metadata": {},
    "source": [
-    "<a href=\"https://colab.research.google.com/github/makagan/TRISEP_Tutorial/blob/main/Exercises/2.First-NN.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+    "<a href=\"https://colab.research.google.com/github/makagan/TRISEP_Tutorial/blob/main/Exercises/2.1.First-NN-SOLN.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "15d1ce10-57f4-4253-8470-8c5e065600ae",
+   "id": "a2c1302e-a038-4031-b8af-fee610471fb7",
    "metadata": {},
    "source": [
     "# Our First NN\n",
@@ -150,7 +150,7 @@
     "\n",
     "**Hint:** this is just three equations:\n",
     "\n",
-    "$$z = X W^T + b_1$$\n"
+    "$$z = X W_1^T + b_1$$\n"
    ]
   },
   {
@@ -349,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 210,
    "id": "bf1022aa-71a4-4ab1-a4fd-9b5f542549d7",
    "metadata": {},
    "outputs": [],
@@ -363,20 +363,25 @@
     "    - grad: if not None, this is the \"upstream gradient\"\n",
     "\n",
     "    Outpus:\n",
-    "    - If grad is passed, return f(x,y), grad\n",
+    "    - If (upstream) grad is passed, return f1(x,y), output_grad\n",
     "    - Else, just the \"normal\" fct, return f1(x,y)\n",
     "    '''\n",
     "    \n",
-    "    out = \n",
+    "    out = x+y\n",
     "    if grad:\n",
-    "        raise NotImplementedError\n",
+    "        dqdx = 1\n",
+    "        dqdy = 1\n",
+    "        # here grad = df/dq\n",
+    "        dfdx = dqdx * grad\n",
+    "        dfdy = dqdy * grad\n",
+    "        return out, np.array([dfdx, dfdy])\n",
     "    else:\n",
     "        return out"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 212,
    "id": "c0e4b3e8-116e-4727-81d8-69e2843d35a3",
    "metadata": {},
    "outputs": [],
@@ -386,16 +391,16 @@
     "    f2(q,z) = q*z\n",
     "    '''\n",
     "\n",
-    "    out =\n",
+    "    out = q * z\n",
     "    if grad:\n",
-    "       raise NotImplementedError\n",
+    "       return out, np.array([z,q])*grad\n",
     "    else: \n",
     "        return out"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 213,
    "id": "5941b7b7-de97-49f8-992e-672758648f3d",
    "metadata": {},
    "outputs": [],
@@ -406,14 +411,14 @@
     "    '''\n",
     "\n",
     "    # Need to run the program 1x to get the values to eval the grad\n",
-    "    q = \n",
-    "    out = \n",
-    "\n",
+    "    \n",
+    "    q = f1(x,y)\n",
+    "    out = f2(q,z)\n",
+    "    \n",
     "    if grad:\n",
-    "\n",
-    "        '''\n",
-    "        Fill in\n",
-    "        '''\n",
+    "        \n",
+    "        _, [dfdq, dfdz] = f2(q,z,grad=grad)\n",
+    "        _, [dfdx,dfdy] = f1(x,y, dfdq)\n",
     "        \n",
     "        return out, [dfdx, dfdy, dfdz]\n",
     "    \n",
@@ -432,10 +437,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 192,
+   "execution_count": 214,
    "id": "fce6e1be-3907-4442-b162-33a1e56f5e74",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "12\n"
+     ]
+    }
+   ],
    "source": [
     "x,y,z = 5,-2,4\n",
     "print(f(x,y,z))"
@@ -452,10 +465,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 193,
+   "execution_count": 215,
    "id": "f12d235d-33a6-40a6-9936-f28a361bb8b1",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "df/dx= 4\n",
+      "df/dy= 4\n",
+      "df/dz= 3\n"
+     ]
+    }
+   ],
    "source": [
     "dfdf = 1\n",
     "out, grad = f(x,y,z, grad=dfdf)\n",
@@ -476,7 +499,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 229,
    "id": "d6ea1e0c-4b15-4715-b0d4-fdc9be7d8995",
    "metadata": {},
    "outputs": [],
@@ -491,7 +514,7 @@
     "    Outputs:\n",
     "    - H: array (bs,m)\n",
     "\n",
-    "    If grad is true, return tuple: out, (grad_W, grad_b, grad_H)\n",
+    "    If grad is an array (bs,m), return tuple: out, (grad_W, grad_b, grad_H)\n",
     "    - grad_W: array (bs, m, n)\n",
     "    - grad_b: array (bs, m)\n",
     "    - grad_X: array (bs,    n)\n",
@@ -500,18 +523,13 @@
     "    assert X.shape[1] == W.shape[1]\n",
     "    assert W.shape[0] == b.shape[0]\n",
     "\n",
-    "    '''\n",
-    "    TO DO: Fill in\n",
-    "    '''\n",
-    "    raise NotImplementedError\n",
-    "    \n",
-    "    H = \n",
+    "    H = np.einsum('mn,bn->bm',W,X) + b\n",
     "    \n",
     "    if grad is not None:\n",
     "        \n",
-    "        grad_W = \n",
-    "        grad_b = \n",
-    "        grad_X = \n",
+    "        grad_W = np.einsum('bn,bm->bmn',X,grad)\n",
+    "        grad_b = grad * np.ones_like(b)\n",
+    "        grad_X = np.einsum('mn,bm->bn',W,grad)\n",
     "        \n",
     "        return H, (grad_W, grad_b, grad_X)\n",
     "    else:\n",
@@ -520,7 +538,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 239,
    "id": "849c6d4b-25b8-45f0-9d63-4ea1ac07f1fa",
    "metadata": {},
    "outputs": [],
@@ -529,20 +547,18 @@
     "    '''\n",
     "    Non-linearity: better gradient flow\n",
     "    '''\n",
-    "    out = \n",
+    "    out = np.where(z>0,z,0)\n",
     "\n",
     "    if grad is not None:\n",
-    "        '''\n",
-    "        To do: Calculate the local grad and return it too\n",
-    "        ''' \n",
-    "        raise NotImplementedError \n",
+    "        dz = (z>0).astype(float) \n",
+    "        return out, dz * grad\n",
     "    else:\n",
     "        return out"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 240,
    "id": "2ce982f0-1f53-433e-bbd2-9c73a88786c1",
    "metadata": {},
    "outputs": [],
@@ -557,17 +573,16 @@
     "    W2, b2 = param_dict[\"W2\"], param_dict[\"b2\"]\n",
     "\n",
     "    # forward pass\n",
-    "    '''\n",
-    "    TO DO: Fill in\n",
-    "    '''\n",
+    "    z = linear(W1,X,b1)\n",
+    "    h = relu(z)\n",
+    "    out = linear(W2,h,b2)\n",
     "\n",
     "    if grad is not None:\n",
     "        \n",
     "        # reverse pass \n",
-    "        '''\n",
-    "        TO DO: Fill in\n",
-    "        '''\n",
-    "        \n",
+    "        _, (grad_W2, grad_b2, grad_h) = linear(W2,h,b2, grad)\n",
+    "        _, dz = relu(z, grad_h)\n",
+    "        _, (grad_W1, grad_b1, grad_x) = linear (W1,X,b1, dz)\n",
     "\n",
     "        grad_dict ={'W1':grad_W1.mean(axis=0),\n",
     "                    'b1':grad_b1.mean(axis=0),\n",
@@ -581,7 +596,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 241,
    "id": "0f3b8cd7-a2b1-4f27-bbce-ea738e1d9dd4",
    "metadata": {},
    "outputs": [],
@@ -591,10 +606,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 194,
+   "execution_count": 242,
    "id": "ebb18297-1d3b-46db-9951-fee8f090b29d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-4.157840893588943"
+      ]
+     },
+     "execution_count": 242,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# forward mode\n",
     "out = myNN(X, param_dict)\n",
@@ -603,10 +629,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 195,
+   "execution_count": 243,
    "id": "94dbc5e0-d713-4f6a-bf67-4dafce0b882c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-4.157840893588943"
+      ]
+     },
+     "execution_count": 243,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# reverse mode\n",
     "dfdf = np.ones((1,1))\n",
@@ -616,10 +653,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 196,
+   "execution_count": 244,
    "id": "9001d687-79e4-41ec-9f69-7b609eb0a261",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "W1 (16, 5)\n",
+      "b1 (16,)\n",
+      "W2 (1, 16)\n",
+      "b2 (1,)\n"
+     ]
+    }
+   ],
    "source": [
     "for k in param_dict.keys():\n",
     "    print(k,grad_dict[k].shape)"
@@ -649,7 +697,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 245,
    "id": "ce259cf1-fcc5-4a84-85e4-914a3da0e7cf",
    "metadata": {},
    "outputs": [],
@@ -671,7 +719,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 246,
    "id": "4d4aa2ee-f2f7-4cf6-a03e-63a2ee910a01",
    "metadata": {},
    "outputs": [],
@@ -682,7 +730,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": 247,
    "id": "b1fc2082-c8a0-42ea-9c4a-8e3fc196c2ca",
    "metadata": {},
    "outputs": [
@@ -692,7 +740,7 @@
        "Array(6., dtype=float32, weak_type=True)"
       ]
      },
-     "execution_count": 174,
+     "execution_count": 247,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -707,7 +755,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": 249,
    "id": "a46fa584-082b-4adb-8470-35b158205b2f",
    "metadata": {},
    "outputs": [],
@@ -718,7 +766,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": 251,
    "id": "4eb3cc40-afca-4b55-abaa-6aa116afff68",
    "metadata": {},
    "outputs": [],
@@ -729,7 +777,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": 252,
    "id": "fb565620-2c7f-49ab-ac19-5eb2ae5e20d5",
    "metadata": {},
    "outputs": [],
@@ -750,7 +798,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
+   "execution_count": 254,
    "id": "e93e469d-4e10-4a94-b28f-e45ceeaad333",
    "metadata": {},
    "outputs": [],
@@ -776,7 +824,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": 258,
    "id": "e2a3138f-7645-4dcd-a8b9-1682e79e82dc",
    "metadata": {},
    "outputs": [],
@@ -789,7 +837,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 198,
+   "execution_count": 259,
    "id": "6dba56d4-1c27-4015-995d-686ed5d1f977",
    "metadata": {},
    "outputs": [
@@ -817,10 +865,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 199,
+   "execution_count": 260,
    "id": "bef05af7-35c9-45ff-a5fa-55be0b29a117",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "W1 True\n",
+      "W2 True\n",
+      "b1 True\n",
+      "b2 True\n"
+     ]
+    }
+   ],
    "source": [
     "for k, v in grad_dict_jax.items():\n",
     "    print(k, np.all(np.isclose(v, grad_dict[k])))"
