--- a/Exercises/2.2.Intro-NN-pytorch.ipynb
+++ b/Exercises/2.2.Intro-NN-pytorch.ipynb
@@ -5,7 +5,7 @@
    "id": "214ccb5b-816c-4452-a9c4-a306026351d7",
    "metadata": {},
    "source": [
-    "<a href=\"https://colab.research.google.com/github/makagan/TRISEP_Tutorial/blob/main/Exercises/2.Intro-NN-pytorch.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+    "<a href=\"https://colab.research.google.com/github/makagan/TRISEP_Tutorial/blob/main/Exercises/2.2.Intro-NN-pytorch.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
    ]
   },
   {
