--- a/Exercises/3.1.Going-Deeper.ipynb
+++ b/Exercises/3.1.Going-Deeper.ipynb
@@ -5,7 +5,7 @@
    "id": "94aae006-7e2f-44a6-9a2a-dd6e1f31852c",
    "metadata": {},
    "source": [
-    "<a href=\"https://colab.research.google.com/github/makagan/TRISEP_Tutorial/blob/main/Exercises/3.Going-Deeper.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+    "<a href=\"https://colab.research.google.com/github/makagan/TRISEP_Tutorial/blob/main/Exercises/3.1.Going-Deeper.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
    ]
   },
   {
