--- a/Exercises/4.2.AutoEncoder-MNIST.ipynb
+++ b/Exercises/4.2.AutoEncoder-MNIST.ipynb
@@ -5,7 +5,7 @@
    "id": "9f145ebb-d60d-4c28-99f8-19bf86858321",
    "metadata": {},
    "source": [
-    "<a href=\"https://colab.research.google.com/github/makagan/TRISEP_Tutorial/blob/main/Exercises/4.AutoEncoder-MNIST.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+    "<a href=\"https://colab.research.google.com/github/makagan/TRISEP_Tutorial/blob/main/Exercises/4.2.AutoEncoder-MNIST.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
    ]
   },
   {
