--- a/Exercises/3.1.Going-Deeper-SOLN.ipynb
+++ b/Exercises/3.1.Going-Deeper-SOLN.ipynb
@@ -5,7 +5,7 @@
    "id": "fb4aae2d-2c71-4a32-876a-4fbc993edb1d",
    "metadata": {},
    "source": [
-    "<a href=\"https://colab.research.google.com/github/makagan/TRISEP_Tutorial/blob/main/Exercises/3.Going-Deeper-SOLN.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+    "<a href=\"https://colab.research.google.com/github/makagan/TRISEP_Tutorial/blob/main/Exercises/3.1.Going-Deeper-SOLN.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
    ]
   },
   {
