--- a/Exercises/4.2.AutoEncoder-MNIST-SOLN.ipynb
+++ b/Exercises/4.2.AutoEncoder-MNIST-SOLN.ipynb
@@ -5,7 +5,7 @@
    "id": "589da0aa-2d35-4a4c-832b-f965ce1f83bb",
    "metadata": {},
    "source": [
-    "<a href=\"https://colab.research.google.com/github/makagan/TRISEP_Tutorial/blob/main/Exercises/4.AutoEncoder-MNIST-SOLN.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+    "<a href=\"https://colab.research.google.com/github/makagan/TRISEP_Tutorial/blob/main/Exercises/4.2.AutoEncoder-MNIST-SOLN.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
    ]
   },
   {
