--- a/Exercises/3.2.CNN-MNIST.ipynb
+++ b/Exercises/3.2.CNN-MNIST.ipynb
@@ -346,11 +346,11 @@
     "\n",
     "plt.figure(figsize=(8,4))\n",
     "plt.subplot(1,2,1)\n",
-    "plt.imshow(example_filters[0,0], vmin=-1, vmax=1, cmap = 'grey')\n",
+    "plt.imshow(example_filters[0,0], vmin=-1, vmax=1, cmap = 'viridis')\n",
     "plt.title('Vertical filter')\n",
     "plt.axis('off')\n",
     "plt.subplot(1,2,2)\n",
-    "plt.imshow(example_filters[1,0], vmin=-1, vmax=1, cmap = 'grey')\n",
+    "plt.imshow(example_filters[1,0], vmin=-1, vmax=1, cmap = 'viridis')\n",
     "plt.title('Horizontal filter')\n",
     "plt.axis('off')\n",
     "plt.show()"
@@ -424,8 +424,7 @@
     "convout = convLayer(...)\n",
     "convout = convout.detach()  # detach gradients\n",
     "\n",
-    "with plt.xkcd():\n",
-    "  plot_example_activations(grats, convout, channels=np.arange(0, out_channels))"
+    "plot_example_activations(grats, convout, channels=np.arange(0, out_channels))"
    ]
   },
   {
@@ -458,24 +457,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
-   "id": "67b32ed6",
+   "execution_count": null,
+   "id": "45ba954c-39e6-43b6-b105-d8d5926cf173",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Collecting mnist\n",
-      "  Downloading mnist-0.2.2-py2.py3-none-any.whl (3.5 kB)\n",
-      "Requirement already satisfied: numpy in /Users/Psychology/anaconda3/lib/python3.7/site-packages (from mnist) (1.18.1)\n",
-      "Installing collected packages: mnist\n",
-      "Successfully installed mnist-0.2.2\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "!pip install mnist"
+    "import sys\n",
+    "IN_COLAB = 'google.colab' in sys.modules\n",
+    "print(\"Running in Google Colab = \", IN_COLAB)\n",
+    "\n",
+    "if not IN_COLAB:\n",
+    "    # when running locally\n",
+    "    X = np.load('mnist.npz')['x_train']\n",
+    "    y = np.load('mnist.npz')['y_train']\n",
+    "\n",
+    "else:\n",
+    "    # when running on Colab\n",
+    "    from torchvision import datasets, transforms\n",
+    "    # Data file download directory\n",
+    "    LOCAL_DATA_DIR = './mnist-data'\n",
+    "    # Use prepared data handler from pytorch (torchvision)\n",
+    "    dataset = datasets.MNIST(LOCAL_DATA_DIR, train=True, download=True,\n",
+    "                             transform=transforms.Compose([transforms.ToTensor()]))\n",
+    "\n",
+    "\n",
+    "    from torch.utils.data import DataLoader\n",
+    "    from torch import reshape\n",
+    "    train_dataloader = DataLoader(dataset, batch_size=len(dataset), shuffle=False)\n",
+    "\n",
+    "    _X, _y = next(iter(train_dataloader))\n",
+    "\n",
+    "    # dataset already normalized by 255 in Torch, undoing so we can explore ourselves\n",
+    "    X = reshape(255*_X, (len(dataset), 28, 28)).numpy()\n",
+    "    y = _y.numpy()"
    ]
   },
   {
