--- a/Exercises/1.2.Intro-LinearModels-SGD-SOLN.ipynb
+++ b/Exercises/1.2.Intro-LinearModels-SGD-SOLN.ipynb
@@ -121,9 +121,9 @@
    "source": [
     "## Exact solution for a univariate regression\n",
     "\n",
-    "Our model is $Q(\\mathbf{x},\\mathbf{w})$ is $w_0+w_1x_i$. We would like to minimize the MSE:\n",
+    "Our model is $h(\\mathbf{x},\\mathbf{w})$ is $w_0+w_1x_i$. We would like to minimize the MSE:\n",
     "$$\n",
-    "\\text{Min. } \\displaystyle{\\left(\\sum_i (y_i - Q(x_i,\\mathbf{w}))^2\\right)} \\; \\text{  where  } \\; Q(x_i,\\mathbf{w}) = w_0 + w_1x_i\n",
+    "\\text{Min. } \\displaystyle{\\left(\\sum_i (y_i - h(x_i,\\mathbf{w}))^2\\right)} \\; \\text{  where  } \\; h(x_i,\\mathbf{w}) = w_0 + w_1x_i\n",
     "$$\n",
     "\n",
     "The exact solution for is available as:\n",
@@ -166,15 +166,15 @@
     "\n",
     "Another approach to the solution is to use a _Gradient Descent_ technique as we covered in the lecture. In this case, we compute the error (i.e. MSE) and update the weights according to the equation:\n",
     "$$\n",
-    "w_{\\text{new}} = w - \\lambda\\nabla_{\\mathbf{w}} \\mathcal{L}\n",
+    "w_{\\text{new}} = w - \\lambda\\nabla_{\\mathbf{w}} L\n",
     "$$\n",
     "First of all, let's use a bias trick. Our data = input feature vector $\\mathbf{x}$ has only 1 feature. If we expand to $\\mathbf{X}$ and add an identity as the second feature, we can write\n",
     "$$\n",
-    "Q(\\mathbf{x},\\mathbf{w}) = \\mathbf{X}\\cdot\\mathbf{w}\n",
+    "h(\\mathbf{x},\\mathbf{w}) = \\mathbf{X}\\cdot\\mathbf{w}\n",
     "$$\n",
     "A gradient for a linear regression is also covered in the lecture:\n",
     "$$\n",
-    "\\nabla_{\\mathbf{w}}\\mathcal{L} = -2\\left(\\mathbf{y} - Q(\\mathbf{X},\\mathbf{w})\\right)\\cdot\\mathbf{X}\n",
+    "\\nabla_{\\mathbf{w}}L = -2\\left(\\mathbf{y} - h(\\mathbf{X},\\mathbf{w})\\right)\\cdot\\mathbf{X}\n",
     "$$\n",
     "\n",
     "Let's try to implement on our own!\n",
@@ -706,11 +706,11 @@
     "Inherit from `linear_mode_base` and implement a `logistic_regression` class.\n",
     "\n",
     "$$\n",
-    "\\mathcal{L} = \\frac{1}{m}\\sum(-\\mathbf{y}^T\\cdot\\log Q(\\mathbf{x},\\mathbf{w}) - (1-y)^T\\cdot\\log (1-Q(\\mathbf{x},\\mathbf{w}))\n",
+    "L = \\frac{1}{m}\\sum(-\\mathbf{y}^T\\cdot\\log Q(\\mathbf{x},\\mathbf{w}) - (1-y)^T\\cdot\\log (1-Q(\\mathbf{x},\\mathbf{w}))\n",
     "$$\n",
     "\n",
     "$$\n",
-    "\\nabla_{\\mathbf{w}}\\mathcal{L}=\\mathbf{x}^T(Q(\\mathbf{x},\\mathbf{w}) - \\mathbf{y})\n",
+    "\\nabla_{\\mathbf{w}}L=\\mathbf{x}^T(Q(\\mathbf{x},\\mathbf{w}) - \\mathbf{y})\n",
     "$$"
    ]
   },
