--- a/Exercises/1.2.Intro-LinearModels-SGD.ipynb
+++ b/Exercises/1.2.Intro-LinearModels-SGD.ipynb
@@ -146,7 +146,7 @@
     "\n",
     "Another approach to the solution is to use a _Gradient Descent_ technique as we covered in the lecture. In this case, we compute the error (i.e. MSE) and update the weights according to the equation:\n",
     "$$\n",
-    "w_{\\text{new}} = w - \\lambda\\nabla_{\\mathbf{w}} \\mathcal{L}\n",
+    "w_{\\text{new}} = w - \\lambda\\nabla_{\\mathbf{w}} L\n",
     "$$\n",
     "First of all, let's use a bias trick. Our data = input feature vector $\\mathbf{x}$ has only 1 feature. If we expand to $\\mathbf{X}$ and add an identity as the second feature, we can write\n",
     "$$\n",
@@ -154,7 +154,7 @@
     "$$\n",
     "A gradient for a linear regression is also covered in the lecture:\n",
     "$$\n",
-    "\\nabla_{\\mathbf{w}}\\mathcal{L} = -2\\left(\\mathbf{y} - Q(\\mathbf{X},\\mathbf{w})\\right)\\cdot\\mathbf{X}\n",
+    "\\nabla_{\\mathbf{w}}L = -2\\left(\\mathbf{y} - Q(\\mathbf{X},\\mathbf{w})\\right)\\cdot\\mathbf{X}\n",
     "$$\n",
     "\n",
     "Let's try to implement on our own!\n",
@@ -598,11 +598,11 @@
     "Inherit from `linear_mode_base` and implement a `logistic_regression` class.\n",
     "\n",
     "$$\n",
-    "\\mathcal{L} = \\frac{1}{m}\\sum(-\\mathbf{y}^T\\cdot\\log Q(\\mathbf{x},\\mathbf{w}) - (1-y)^T\\cdot\\log (1-Q(\\mathbf{x},\\mathbf{w}))\n",
+    "L = \\frac{1}{m}\\sum(-\\mathbf{y}^T\\cdot\\log Q(\\mathbf{x},\\mathbf{w}) - (1-y)^T\\cdot\\log (1-Q(\\mathbf{x},\\mathbf{w}))\n",
     "$$\n",
     "\n",
     "$$\n",
-    "\\nabla_{\\mathbf{w}}\\mathcal{L}=\\mathbf{x}^T(Q(\\mathbf{x},\\mathbf{w}) - \\mathbf{y})\n",
+    "\\nabla_{\\mathbf{w}}L=\\mathbf{x}^T(Q(\\mathbf{x},\\mathbf{w}) - \\mathbf{y})\n",
     "$$"
    ]
   },
